--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   },
   "license": "MIT",
   "dependencies": {
-    "axios": "0.21.1",
+    "axios": "0.21.2",
     "connected-react-router": "6.8.0",
     "electron-updater": "4.3.1",
     "electron-util": "0.14.2",
@@ -53,7 +53,7 @@
     "sqlite3": "4.2.0",
     "tail": "2.0.3",
     "tree-kill": "1.2.2",
-    "typeorm": "0.2.25",
+    "typeorm": "0.2.37",
     "typesafe-actions": "4.4.2",
     "uuid": "3.3.2",
     "uuid-validate": "0.0.3",
@@ -86,7 +86,7 @@
     "coveralls": "3.1.0",
     "cross-env": "7.0.2",
     "electron": "8.5.5",
-    "electron-builder": "22.5.1",
+    "electron-builder": "^22.14.2",
     "electron-devtools-installer": "3.1.1",
     "enzyme": "3.11.0",
     "enzyme-adapter-react-16": "1.15.2",
